logs/Slang/generated/keywords/5.6.2--keyword_sync_accept_on.sv.log
name: sync_accept_on
description: The 'sync_accept_on' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_sync_accept_on.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_sync_accept_on.sv:8:8: error: expected declarator
    bit sync_accept_on;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_sync_accept_on.sv:8:9: error: expected member
    bit sync_accept_on;
        ^~~~~~~~~~~~~~
